maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:13: error: type mismatch;
 found   : Unit
 required: Boolean
  setDirection(pos); // bring back to the initial position
              ^